Closed
Bug 1665945
Opened 4 years ago
Closed 4 years ago
"error: member access into incomplete type 'mozilla::layers::IGPUVideoSurfaceManager" build bustage with --disable-accessibility
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
82 Branch
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | unaffected |
firefox82 | --- | fixed |
People
(Reporter: RyanVM, Assigned: jya)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
https://treeherder.mozilla.org/logviewer.html#?job_id=316085614&repo=try
In file included from UnifiedProtocols25.cpp:2:
In file included from /builds/worker/workspace/obj-build/ipc/ipdl/PProxyConfigLookup.cpp:7:
In file included from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/net/PSocketProcessParent.h:9:
In file included from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/net/PSocketProcess.h:11:
In file included from /builds/worker/workspace/obj-build/dist/include/ipc/IPCMessageUtils.h:11:
In file included from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message_utils.h:27:
In file included from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message.h:14:
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(49,37): error: member access into incomplete type 'mozilla::layers::IGPUVideoSurfaceManager'
static void AddRef(U* aPtr) { aPtr->AddRef(); }
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(380,61): note: in instantiation of member function 'mozilla::RefPtrTraits<mozilla::layers::IGPUVideoSurfaceManager>::AddRef' requested here
static void AddRef(U* aPtr) { mozilla::RefPtrTraits<U>::AddRef(aPtr); }
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(109,37): note: in instantiation of member function 'RefPtr<mozilla::layers::IGPUVideoSurfaceManager>::ConstRemovingRefPtrTraits<mozilla::layers::IGPUVideoSurfaceManager>::AddRef' requested here
ConstRemovingRefPtrTraits<T>::AddRef(mRawPtr);
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RemoteImageHolder.h(34,9): note: in instantiation of member function 'RefPtr<mozilla::layers::IGPUVideoSurfaceManager>::RefPtr' requested here
mManager(aManager),
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RemoteImageHolder.h(19,7): note: forward declaration of 'mozilla::layers::IGPUVideoSurfaceManager'
class IGPUVideoSurfaceManager;
^
In file included from UnifiedProtocols25.cpp:2:
In file included from /builds/worker/workspace/obj-build/ipc/ipdl/PProxyConfigLookup.cpp:7:
In file included from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/net/PSocketProcessParent.h:9:
In file included from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/net/PSocketProcess.h:11:
In file included from /builds/worker/workspace/obj-build/dist/include/ipc/IPCMessageUtils.h:11:
In file included from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message_utils.h:27:
In file included from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message.h:14:
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(50,38): error: member access into incomplete type 'mozilla::layers::IGPUVideoSurfaceManager'
static void Release(U* aPtr) { aPtr->Release(); }
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(381,62): note: in instantiation of member function 'mozilla::RefPtrTraits<mozilla::layers::IGPUVideoSurfaceManager>::Release' requested here
static void Release(U* aPtr) { mozilla::RefPtrTraits<U>::Release(aPtr); }
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(81,37): note: in instantiation of member function 'RefPtr<mozilla::layers::IGPUVideoSurfaceManager>::ConstRemovingRefPtrTraits<mozilla::layers::IGPUVideoSurfaceManager>::Release' requested here
ConstRemovingRefPtrTraits<T>::Release(mRawPtr);
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RemoteImageHolder.h(27,3): note: in instantiation of member function 'RefPtr<mozilla::layers::IGPUVideoSurfaceManager>::~RefPtr' requested here
RemoteImageHolder(layers::IGPUVideoSurfaceManager* aManager,
^
/builds/worker/workspace/obj-build/dist/include/mozilla/RemoteImageHolder.h(19,7): note: forward declaration of 'mozilla::layers::IGPUVideoSurfaceManager'
class IGPUVideoSurfaceManager;
^
2 errors generated.
Note that to reproduce this issue locally, you'll need to apply the patch attached to bug 1665160 to work around that build bustage :).
Flags: needinfo?(jyavenard)
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 1•4 years ago
|
||
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1aad6539812f
Fix compilation. r=gerald
Updated•4 years ago
|
Blocks: diversion-goodbye
Comment 3•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•