Bug 1665945 - Fix compilation. r=gerald

Fix ""error: member access into incomplete type 'mozilla::layers::IGPUVideoSurfaceManager" build bustage with --disable-accessibility"
we don't want to fully declare the class in the header as it would require to leak most of gfx headers.

Differential Revision: https://phabricator.services.mozilla.com/D90776